--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <title>Simple Style Transfer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1 class="mt-5">Simple Style Transfer</h1>
-        <div id="webcam-container" class="mt-4 full-width"></div>
-        <button id="webcam-button" class="btn btn-primary overlay-button">Change Webcam</button>
+        <div id="webcam-container" class="mt-4 full-width">
+            <video id="webcam-video" style="display: none;"></video>
+        </div>
+        <button id="webcam-button" class="btn btn-primary overlay-button"><i class="fas fa-camera"></i></button>
         <canvas id="canvas" class="d-none"></canvas>
         <img id="captured-image" src="" alt="captured image" class="d-none img-fluid full-width">
         <div class="overlay-button">
@@ -27,7 +30,7 @@
 
     <!-- Modal -->
     <div class="modal fade" id="webcamModal" tabindex="-1" aria-labelledby="webcamModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="webcamModalLabel">Choose Webcam</h5>
