--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h5 class="modal-title" id="webcamModalLabel">Choose Webcam</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body d-flex align-items-center">
+                <div class="modal-body">
                     <p id="cameraError" style="display: none;"></p>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
