--- a/index.html
+++ b/index.html
@@ -1,34 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Simple Style Transfer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-    <div class="container">
-        <h1 class="mt-5">Simple Style Transfer</h1>
-        <div id="webcam-container" class="mt-4 full-width">
-            <video id="webcam-video" style="display: none;"></video>
-        </div>
-        <button id="webcam-button" class="btn btn-primary overlay-button"><i class="fas fa-camera"></i></button>
-        <canvas id="canvas" class="d-none"></canvas>
-        <img id="captured-image" src="" alt="captured image" class="d-none img-fluid full-width">
-        <div class="overlay-button">
-            <button id="transfer-button" class="btn btn-success d-none">Transfer Style</button>
-            <button id="download-button" class="btn btn-success d-none">Download</button>
-            <button id="cancel-button" class="btn btn-danger d-none">Cancel</button>
-        </div>
-        <img id="output-image" src="" alt="output image" class="d-none img-fluid full-width">
-        <div class="overlay-button">
-            <button id="qr-button" class="btn btn-success d-none">QR Code</button>
-            <button id="download-output-button" class="btn btn-success d-none">Download</button>
-            <button id="cancel-output-button" class="btn btn-danger d-none">Cancel</button>
-        </div>
-    </div>
 
-    <!-- Modal -->
+<body>
+
+    <div id="webcam-container" class="full-width center">
+        <video id="webcam-video" class="full-width" style="display: none;"></video>
+    </div>
+    <button id="webcam-button" class="btn btn-primary overlay-button"><i class="fas fa-camera"></i></button>
+    <button id="settings-button" class="btn btn-primary overlay-button" data-bs-toggle="modal"
+        data-bs-target="#settingsModal"><i class="fas fa-cog"></i></button>
+    <canvas id="canvas" class="d-none"></canvas>
+
+    <!-- Webcam Modal -->
     <div class="modal fade" id="webcamModal" tabindex="-1" aria-labelledby="webcamModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
@@ -39,13 +30,15 @@
                 <div class="modal-body">
                     <p id="cameraError" style="display: none;"></p>
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                          Select Camera
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Select Camera
                         </button>
-                        <ul class="dropdown-menu bg-dark text-white" aria-labelledby="dropdownMenuButton" id="cameraDropdown">
-                          <!-- Camera options will be added here by JavaScript -->
+                        <ul class="dropdown-menu bg-dark text-white" aria-labelledby="dropdownMenuButton"
+                            id="cameraDropdown">
+                            <!-- Camera options will be added here by JavaScript -->
                         </ul>
-                      </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -55,8 +48,154 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- Image Modal -->
+
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img id="captured-image" src="" alt="captured image" class="img-fluid full-width">
+                </div>
+
+                <div class="modal-footer">
+                    <button id="transfer-button" type="button" class="btn btn-success">Transfer Style</button>
+                    <button id="img-download-button" type="button" class="btn btn-primary">Download</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Transferred Image Modal -->
+    <div class="modal fade" id="outputModal" tabindex="-1" aria-labelledby="outputModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img id="output-image" src="" alt="output image" class="img-fluid full-width">
+                </div>
+
+                <div class="modal-footer">
+                    <button id="qr-button" type="button" class="btn btn-success" style="display: none;">QR Code</button>
+                    <button id="output-download-button" type="button" class="btn btn-primary">Download</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- QR Code Modal -->
+    <div class="modal fade" id="qrModal" tabindex="-1" aria-labelledby="qrModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div id="qr-code"></div>
+                </div>
+
+                <div class="modal-footer">
+                    <button id="qr-download-button" type="button" class="btn btn-primary">Download</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="loading-screen" class="position-fixed w-100 h-100 justify-content-center align-items-center">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="main.js"></script>
+
+    <!-- Settings Modal -->
+    <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="settingsModalLabel">Settings</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row mx-5 my-5">
+                            <div class="col-4">
+                                <label for="style-image" class="form-label">Style Image</label>
+                            </div>
+                            <div class="col-8" style="display: flex; justify-content: flex-end; align-items: center;">
+                                <div class="dropdown" id="styleDropdownDiv">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button"
+                                        id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Select Style
+                                    </button>
+                                    <ul class="dropdown-menu bg-dark text-white" aria-labelledby="dropdownMenuButton"
+                                        id="styleDropdown">
+                                        <!-- Style options will be added here by JavaScript -->
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mx-5 mb-5">
+                            <img id="style-image" src="style.jpg" alt="style image" class="img-fluid full-width">
+                        </div>
+
+                        <div class="row mx-5 mb-2">
+                            <label for="style-image-size" class="form-label">Style Image Size</label>
+                        </div>
+
+                        <div class="row mx-5 mb-5">
+                            <div class="col-10">
+                                <input type="range" min="0" max="100" value="100" class="custom-range centered"
+                                    id="style-image-size">
+                            </div>
+
+                            <div class="col-2">
+                                <span id="style-image-size-value">100</span>
+                            </div>
+                        </div>
+
+                        <div class="row mx-5 mb-2">
+                            <label for="output-image-size" class="form-label">Output Image Size</label>
+                        </div>
+
+                        <div class="row mx-5 mb-5">
+                            <div class="col-10">
+                                <input type="range" min="0" max="100" value="100" class="custom-range centered"
+                                    id="output-image-size">
+
+                            </div>
+
+                            <div class="col-2">
+                                <span id="output-image-size-value">100</span>
+                            </div>
+                        </div>
+
+                        <div class="row mx-5 mb-2">
+                            <label for="style-strength" class="form-label">Style Strength</label>
+                        </div>
+
+                        <div class="row mx-5 mb-4">
+                            <div class="col-10">
+                                <input type="range" min="0" max="100" value="100" class="custom-range centered"
+                                    id="style-strength">
+
+                            </div>
+
+                            <div class="col-2">
+                                <span id="style-strength-value">100</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
