--- a/index.html
+++ b/index.html
@@ -105,13 +105,6 @@
         </div>
     </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-    <script src="main.js"></script>
-
     <!-- Settings Modal -->
     <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -153,8 +146,8 @@
                                     id="style-image-size">
                             </div>
 
-                            <div class="col-2">
-                                <span id="style-image-size-value">100</span>
+                            <div class="col-2 text-end">
+                                <span id="style-image-size-value" class="range-value">100</span>
                             </div>
                         </div>
 
@@ -169,8 +162,8 @@
 
                             </div>
 
-                            <div class="col-2">
-                                <span id="output-image-size-value">100</span>
+                            <div class="col-2 text-end">
+                                <span id="output-image-size-value" class="range-value">100</span>
                             </div>
                         </div>
 
@@ -185,8 +178,8 @@
 
                             </div>
 
-                            <div class="col-2">
-                                <span id="style-strength-value">100</span>
+                            <div class="col-2 text-end">
+                                <span id="style-strength-value" class="range-value">100</span>
                             </div>
                         </div>
                     </div>
@@ -196,6 +189,13 @@
         </div>
     </div>
 
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
