--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="modal-content">
                 <div class="modal-body">
                     <h5 class="modal-title" id="errorModalLabel">Error</h5>
-                    <p class="error-message">An error occurred. Please try again later.</p>
+                    <p id="error-message">An error occurred. Please try again later.</p>
                 </div>
 
                 <div class="modal-footer">
