--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <div class="col-8" style="display: flex; justify-content: flex-end; align-items: center;">
                                 <div class="dropdown" id="styleDropdownDiv">
                                     <button class="btn btn-secondary dropdown-toggle" type="button"
-                                        id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                        id="dropdownMenuStyleButton" data-bs-toggle="dropdown" aria-expanded="false">
                                         Select Style
                                     </button>
                                     <ul class="dropdown-menu bg-dark text-white" aria-labelledby="dropdownMenuButton"
