added settings button to captured image modal

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                 </div>
 
                 <div class="modal-footer">
+                    <button id="image-settings-button" type="button" class="btn btn-secondary" data-bs-toggle="modal"
+                        data-bs-target="#settingsModal">Settings</button>
                     <button id="transfer-button" type="button" class="btn btn-success">Transfer Style</button>
                     <button id="img-download-button" type="button" class="btn btn-primary">Download</button>
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
