--- a/index.html
+++ b/index.html
@@ -115,13 +115,15 @@
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="errorModalLabel">Error</h5>
+                    <h5 class="modal-title mx-3" id="errorModalLabel">Error</h5>
                 </div>
 
                 <div class="modal-body">
-                    <div class="position-absolute top-50 start-50 translate-middle" id="error-message-box">
+                    <div id="error-message-icon" class="error-message col-2">
                         <i class="fas fa-exclamation-triangle fa-5x"></i>
-                        <p id="error-message">An error occurred. Please try again later.</p>
+                    </div>
+                    <div id="error-message-box" class="error-message col-10">
+                        <p id="error-message-text">An error occurred. Please try again later.</p>
                     </div>
                 </div>
 
