--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <i class="fas fa-exclamation-triangle fa-5x"></i>
                     </div>
                     <div id="error-message-box" class="error-message col-10">
-                        <p id="error-message-text">An error occurred. Please try again later.</p>
+                        <p id="error-message-text" class="fs-5 fs-md-4 fs-lg-3">An error occurred. Please try again later.</p>
                     </div>
                 </div>
 
