continue to improve error box

--- a/index.html
+++ b/index.html
@@ -119,11 +119,14 @@
                 </div>
 
                 <div class="modal-body">
-                    <div id="error-message-icon" class="error-message col-2">
-                        <i class="fas fa-exclamation-triangle fa-5x"></i>
-                    </div>
-                    <div id="error-message-box" class="error-message col-10">
-                        <p id="error-message-text" class="fs-5 fs-md-4 fs-lg-3">An error occurred. Please try again later.</p>
+                    <div class="row mx-lg-5 mx-3 my-lg-5 my-3">
+                        <div id="error-message-icon" class="error-message col-2">
+                            <i class="fas fa-exclamation-triangle fa-5x"></i>
+                        </div>
+                        <div id="error-message-box" class="error-message col-10">
+                            <p id="error-message-text" class="fs-5 fs-md-4 fs-lg-3">An error occurred. Please try again
+                                later.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -215,7 +218,8 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button id="close-button" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button id="close-button" type="button" class="btn btn-secondary"
+                        data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
