added last captured image button

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <div>
         <button id="webcam-button" class="btn btn-primary overlay-button"><i class="fas fa-camera"></i></button>
-        <button id="settings-button" class="btn btn-primary overlay-button" data-bs-toggle="modal"
-            data-bs-target="#settingsModal"><i class="fas fa-cog"></i></button>
+        <button id="settings-button" class="btn btn-primary overlay-button" data-bs-toggle="modal" data-bs-target="#settingsModal"><i class="fas fa-cog"></i></button>
+        <button id="captured-image-button" class="btn btn-primary overlay-button" data-bs-toggle="modal" data-bs-target="#imageModal" style="display: none;"><i class="fas fa-image"></i></button>
     </div>
 
     <canvas id="canvas" class="d-none"></canvas>
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button id="image-settings-button" type="button" class="btn btn-secondary">Settings</button>
+                    <button id="image-settings-button" type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#settingsModal">Settings</button>
                     <button id="transfer-button" type="button" class="btn btn-success">Transfer Style</button>
                     <button id="img-download-button" type="button" class="btn btn-primary">Download</button>
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
