added output image button to show the modal

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="webcam-button" class="btn btn-primary overlay-button"><i class="fas fa-camera"></i></button>
         <button id="settings-button" class="btn btn-primary overlay-button" data-bs-toggle="modal" data-bs-target="#settingsModal"><i class="fas fa-cog"></i></button>
         <button id="captured-image-button" class="btn btn-primary overlay-button" data-bs-toggle="modal" data-bs-target="#imageModal" style="display: none;"><i class="fas fa-image"></i></button>
+        <button id="output-image-button" class="btn btn-primary overlay-button" data-bs-toggle="modal" data-bs-target="#outputModal" style="display: none;"><i class="fas fa-file-image"></i></button>
     </div>
 
     <canvas id="canvas" class="d-none"></canvas>
